--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Michael John Eagle, Postdoctorial Fellow
 ---
 
 		<div class="blurb">
-			<h1>Hi there, I'm Hank Quinlan!</h1>
-			<p>I'm best known as the horrible cop from <em>A Touch of Evil</em>. Don't trust me. <a href="/about">Read more about my life...</a></p>
+			<h1>Hello, this is Michael John Eagle.</h1>
+			<h2>Background:</h2>
+			<p>I earned my PhD in Computer Science from North Carolina State University. My main area of research is focused on deriving insight about human behavior using data-driven methods, and using that insight to create new and better systems. I have a specific focus on complex interactive environments, such as video games and intelligent tutoring systems. My PhD advisor was Dr. Tiffany Barnes. I have worked in the Data Science industry for Turbine Inc. and Blizzard Entertainment. I used my human-centered data science expertise to uncover important insights for game designers and marketing teams. <a href="/about">Read more about my research...</a></p>
+
+			<h2>Hobbies:</h2>
+			<p> I am interested in video games and tabletop games. I enjoy watching live streams on Twitch.tv, as well as video game content from YouTube. I have combined my passions on several occasions, including performing analysis on data from Twitch streams and building AI for video games. </p>
+
 		</div> 
